// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders the Home link selected 1`] = `
<div>
  <header
    class="box-border flex h-16 flex-col justify-center border-b border-blue-50 bg-white backdrop-blur print:hidden"
  >
    <div
      class="container flex items-center justify-between md:mx-auto"
    >
      <div
        class="z-[120] flex items-center space-x-2"
      >
        <a
          href="/"
        >
          <h1
            class="flex items-center space-x-2 lg:space-x-4"
          >
            <img
              alt="IDB"
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/IDB-logo.svg"
              style="color: transparent;"
              width="65"
            />
            <div
              class="space-x-2"
            >
              <span
                class="text-xs font-medium text-blue-500 lg:text-sm"
              >
                AmazoniaForever360+
              </span>
            </div>
          </h1>
        </a>
        <button
          aria-controls="radix-:r10:"
          aria-expanded="false"
          aria-haspopup="dialog"
          data-state="closed"
          type="button"
        >
          <div
            class="inline-flex items-center rounded-md border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-blue-100 text-xs lg:text-sm"
          >
            Beta
          </div>
        </button>
        <p
          class="text-sm text-muted-foreground sr-only"
          id="radix-:r12:"
        >
          AmazoniaForever360+ beta version
        </p>
      </div>
      <div
        class="fresnel-container fresnel-greaterThanOrEqual-md fresnel-:r13:"
      >
        <nav
          class="flex space-x-8 print:hidden"
        >
          <a
            class="text-sm hover:text-cyan-500 text-cyan-500"
            href="/"
          >
            Home
          </a>
          <a
            class="text-sm hover:text-cyan-500"
            href="/report"
          >
            Report Tool
          </a>
          <a
            class="text-sm hover:text-cyan-500"
            href="/hub"
          >
            Hub
          </a>
        </nav>
      </div>
      <div
        class="fresnel-container fresnel-lessThan-md fresnel-:r14:"
      >
        <button
          aria-controls="radix-:r15:"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="fixed right-5 top-1/2 z-[110] flex h-6 w-6 -translate-y-1/2 transform cursor-pointer flex-col flex-wrap justify-around"
          data-state="closed"
          type="button"
        >
          <div
            class="block h-0.5 w-6 origin-[1px] rounded-full bg-blue-600 transition-all rotate-0"
          />
          <div
            class="block h-0.5 w-6 origin-[1px] rounded bg-blue-600 transition-all translate-x-0"
          />
          <div
            class="block h-0.5 w-6 origin-[1px] rounded bg-blue-600 transition-all rotate-0"
          />
        </button>
        <p
          class="text-sm text-muted-foreground sr-only"
          id="radix-:r17:"
        >
          AmazoniaForever360+ menu
        </p>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header renders the Hub link selected 1`] = `
<div>
  <header
    class="box-border flex h-16 flex-col justify-center border-b border-blue-50 bg-white backdrop-blur print:hidden"
  >
    <div
      class="container flex items-center justify-between md:mx-auto"
    >
      <div
        class="z-[120] flex items-center space-x-2"
      >
        <a
          href="/"
        >
          <h1
            class="flex items-center space-x-2 lg:space-x-4"
          >
            <img
              alt="IDB"
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/IDB-logo.svg"
              style="color: transparent;"
              width="65"
            />
            <div
              class="space-x-2"
            >
              <span
                class="text-xs font-medium text-blue-500 lg:text-sm"
              >
                AmazoniaForever360+
              </span>
            </div>
          </h1>
        </a>
        <button
          aria-controls="radix-:r1g:"
          aria-expanded="false"
          aria-haspopup="dialog"
          data-state="closed"
          type="button"
        >
          <div
            class="inline-flex items-center rounded-md border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-blue-100 text-xs lg:text-sm"
          >
            Beta
          </div>
        </button>
        <p
          class="text-sm text-muted-foreground sr-only"
          id="radix-:r1i:"
        >
          AmazoniaForever360+ beta version
        </p>
      </div>
      <div
        class="fresnel-container fresnel-greaterThanOrEqual-md fresnel-:r1j:"
      >
        <nav
          class="flex space-x-8 print:hidden"
        >
          <a
            class="text-sm hover:text-cyan-500"
            href="/"
          >
            Home
          </a>
          <a
            class="text-sm hover:text-cyan-500"
            href="/report"
          >
            Report Tool
          </a>
          <a
            class="text-sm hover:text-cyan-500 text-cyan-500"
            href="/hub"
          >
            Hub
          </a>
        </nav>
      </div>
      <div
        class="fresnel-container fresnel-lessThan-md fresnel-:r1k:"
      >
        <button
          aria-controls="radix-:r1l:"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="fixed right-5 top-1/2 z-[110] flex h-6 w-6 -translate-y-1/2 transform cursor-pointer flex-col flex-wrap justify-around"
          data-state="closed"
          type="button"
        >
          <div
            class="block h-0.5 w-6 origin-[1px] rounded-full bg-blue-600 transition-all rotate-0"
          />
          <div
            class="block h-0.5 w-6 origin-[1px] rounded bg-blue-600 transition-all translate-x-0"
          />
          <div
            class="block h-0.5 w-6 origin-[1px] rounded bg-blue-600 transition-all rotate-0"
          />
        </button>
        <p
          class="text-sm text-muted-foreground sr-only"
          id="radix-:r1n:"
        >
          AmazoniaForever360+ menu
        </p>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header renders the Report Tool link selected 1`] = `
<div>
  <header
    class="box-border flex h-16 flex-col justify-center border-b bg-white backdrop-blur print:hidden border-blue-100"
  >
    <div
      class="container flex items-center justify-between md:mx-auto"
    >
      <div
        class="z-[120] flex items-center space-x-2"
      >
        <a
          href="/"
        >
          <h1
            class="flex items-center space-x-2 lg:space-x-4"
          >
            <img
              alt="IDB"
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/IDB-logo.svg"
              style="color: transparent;"
              width="65"
            />
            <div
              class="space-x-2"
            >
              <span
                class="text-xs font-medium text-blue-500 lg:text-sm"
              >
                AmazoniaForever360+
              </span>
            </div>
          </h1>
        </a>
        <button
          aria-controls="radix-:r18:"
          aria-expanded="false"
          aria-haspopup="dialog"
          data-state="closed"
          type="button"
        >
          <div
            class="inline-flex items-center rounded-md border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-blue-100 text-xs lg:text-sm"
          >
            Beta
          </div>
        </button>
        <p
          class="text-sm text-muted-foreground sr-only"
          id="radix-:r1a:"
        >
          AmazoniaForever360+ beta version
        </p>
      </div>
      <div
        class="fresnel-container fresnel-greaterThanOrEqual-md fresnel-:r1b:"
      >
        <nav
          class="flex space-x-8 print:hidden"
        >
          <a
            class="text-sm hover:text-cyan-500"
            href="/"
          >
            Home
          </a>
          <a
            class="text-sm hover:text-cyan-500 text-cyan-500"
            href="/report"
          >
            Report Tool
          </a>
          <a
            class="text-sm hover:text-cyan-500"
            href="/hub"
          >
            Hub
          </a>
        </nav>
      </div>
      <div
        class="fresnel-container fresnel-lessThan-md fresnel-:r1c:"
      >
        <button
          aria-controls="radix-:r1d:"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="fixed right-5 top-1/2 z-[110] flex h-6 w-6 -translate-y-1/2 transform cursor-pointer flex-col flex-wrap justify-around"
          data-state="closed"
          type="button"
        >
          <div
            class="block h-0.5 w-6 origin-[1px] rounded-full bg-blue-600 transition-all rotate-0"
          />
          <div
            class="block h-0.5 w-6 origin-[1px] rounded bg-blue-600 transition-all translate-x-0"
          />
          <div
            class="block h-0.5 w-6 origin-[1px] rounded bg-blue-600 transition-all rotate-0"
          />
        </button>
        <p
          class="text-sm text-muted-foreground sr-only"
          id="radix-:r1f:"
        >
          AmazoniaForever360+ menu
        </p>
      </div>
    </div>
  </header>
</div>
`;
